Attempt to prevent scrolling on mobile

--- a/src/components/keyboard/keyboard.css
+++ b/src/components/keyboard/keyboard.css
@@ -2,6 +2,7 @@
 
 #keyboard-container {
   display: flex;
+  -webkit-user-drag: none;
 }
 
 #keyboard-inner {
